--- a/core/instruct0.html
+++ b/core/instruct0.html
@@ -1,6 +1,6 @@
-<label for="subID">Subject ID:</label>
+<label for="subID">Prolific ID:</label>
 <input type="text" id="subID" name="subID"/>
 <br><br>
-<div> Please enter a unique subject identifier; No more than 30 characters, alphanumeric only. </div>
+<div> Please enter your Prolific ID so that you can be compensated for your participation. </div>
 <br>
 <input type="submit" value="Submit Subject ID" onclick='loadInstructions("one");'>
