Updated IAT instructions/no gender

--- a/core/instruct1.html
+++ b/core/instruct1.html
@@ -1,9 +1,10 @@
 
-<h2>Welcome to the <span class='IATname'></span> IAT</h2>
+<h2>Welcome to the IAT</h2>
 
-<p>You have opted to complete the <span class='IATname'></span> IAT.</p>
+<p>You have opted to complete the IAT.</p>
 
-<p>You will complete three tasks: two brief questionnaires and an IAT in which you will sort words <span id='andpics'></span> into categories as quickly as possible. You should be able to complete the tasks in less than 10 minutes total. When you finish, you will receive your results as well as more information about the test and the performance of others.</p>
+<p>You will complete a task in which you will sort words and pictures into categories as quickly as possible. You should be able to complete the task in less than 5 minutes. When you finish, you will receive a completion code. Please navigate back and <b>enter the code to finish the survey to receive payment.</b></p>
 
 <input type="submit" value="Continue"  onclick='loadInstructions("two");'>
     
+
